--- a/public/chat.html
+++ b/public/chat.html
@@ -14,7 +14,7 @@
 <div id="chat-container">
   <div class="header">
     <div class="grp-img">
-      <img id="ai-avatar" src="https://cdn.glitch.global/75bcfb9b-05b5-4a7c-a5be-e94c063e143f/avatar.jpg?v=1727042473922" alt="">
+      <img id="ai-avatar" src="images/ai-avatar.jpg" alt="">
     </div>
     <div id="chatbot-info">
       <h3 id="chatbot-name">
