--- a/public/study.html
+++ b/public/study.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="accordion arrows">
     <header class="box">
-      <label for="acc-close" class="box-title"><h1>USFCA Computer Science Year-by-Year Course Planner</h1><p>Please complete these parts step by step.</p></label>
+      <label for="acc-close" class="box-title"><h1>USFCA Computer Science Year-by-Year Course Planner</h1><p><p>Hi <span id="userName"></span>, please complete these parts step by step.</p> Please complete these parts step by step.</p></label>
     </header>
     <input type="radio" name="accordion" id="cb1" />
     <section class="box">
