--- a/public/study.html
+++ b/public/study.html
@@ -27,7 +27,6 @@
       <label class="box-close" for="acc-close"></label>
       <div class="box-content"><h2>Study objective</h2><p><b>Create a year-by-year academic plan for your Computer Science Undergraduate course at USFCA, This includes all the required modules you will need to complete in order to graduate and all the modules you will add need to have the proper prerequisites completed in order for it to have the correct chaining and be valid. You will firstly use the USFCA website to create an Academic plan, and next you will use an AI agent to create one.</p>
 	  <p>You will use Google Sheets to create both academic plans.</p>
-	  <p>You are free to create the sheets however you want in terms of style and layout.</b></p>
 	  <p>Begin by following the steps below:</p>
           <ul>
             <li><br>1. Open <a href="https://sheets.google.com/" target="_blank">Google Sheets</a><br></li>
@@ -36,10 +35,10 @@
             <li><br>4. Create a new tab and rename it "Agent"<br></li>
             <li><br>5. Your tabs should look like below:<br></li>
             <li><br><img src="images/tabs.jpg" alt=""><br></li>
-	    <li><br>6. Split your screen so it looks like below:<br></li>
-	    <li><br><img src="images/split_screen.jpg" alt=""><br></li>
+			<li><br>6. Split your screen so it looks like below:<br></li>
+			<li><br><img src="images/split_screen.jpg" alt=""><br></li>
             <li><br>6. Use the USF website to plan your course year-by-year: <a href="https://www.usfca.edu/" target="_blank">USF Website</a><br></li>
-            <li><br>7. Create a table containing the required modules to graduate for each semester for 4 years.<br></li>
+            <li><br>7. Create a table containing the required modules to graduate for each semester for 4 years. You are free to create the sheets however you want in terms of style and layout.<br></li>
           </ul></div>
     </section>
     <input type="radio" name="accordion" id="cb3" />
@@ -58,11 +57,11 @@
 	  <p>Begin by following the steps below:</p>
           <ul>
             <li><br>1. Click on the AI Agent button      <a href="#" target="_blank" class="button" id ="aiTarget">AI Agent</a><br></li>
-	    <li><br>2. Your screen should still be split like below, but now select the 'Agent' tab you created on Google Sheets<br></li>
-	    <li><br><img src="images/agent_split.jpg" alt=""><br></li>
+			<li><br>2. Your screen should still be split like below, but now select the 'Agent' tab you created on Google Sheets<br></li>
+			<li><br><img src="images/agent_split.jpg" alt=""><br></li>
             <li><br>3. Write prompts inside the AI agent's message box that you think will make you achieve your objective.</a><br></li>
             <li><br>4. Create a table containing the required modules to graduate for each semester for 4 years using the responses from the AI agent.<br></li>
-	    <li><br>5. You are free to create the sheets however you want in terms of style and layout.<br></li>
+			<li><br>5. You are free to create the sheets however you want in terms of style and layout.<br></li>
           </ul>
 </div>
     </section>
@@ -73,17 +72,17 @@
       <div class="box-content">
             <p>Share your completed google sheet using the instructions below</p>
               <ul>
-		<li><br>1. Maximize the Google Sheet window<br></li>
-		<li><br><img src="images/max_window.jpg" alt=""><br></li>
+			    <li><br>1. Maximize the Google Sheet window<br></li>
+				<li><br><img src="images/max_window.jpg" alt=""><br></li>
                 <li><br>2. Click "Share" button<br></li>
-		<li><br><img src="images/share.jpg" alt=""><br></li>
+				<li><br><img src="images/share.jpg" alt=""><br></li>
                 <li><br>3. Name file "Academic Plan" and save<br></li>
-		<li><br><img src="images/share_name.jpg" alt=""><br></li>
+				<li><br><img src="images/share_name.jpg" alt=""><br></li>
                 <li><br>4. Set access to "Anyone with the link"<br></li>
-		<li><br><img src="images/link_share.jpg" alt=""><br></li>
-		<li><br>5. Copy the link<br></li>
-		<li><br><img src="images/copy_link.jpg" alt=""><br></li>
-		<li><br>6. Copy/Paste your link below and Submit<br></li>
+				<li><br><img src="images/link_share.jpg" alt=""><br></li>
+				<li><br>5. Copy the link<br></li>
+				<li><br><img src="images/copy_link.jpg" alt=""><br></li>
+				<li><br>6. Copy/Paste your link below and Submit<br></li>
               </ul>
 <form id="googleSheetForm">
   <input type="text" id="googleSheetLink" placeholder="Enter your Google Sheet link here" required />
@@ -124,15 +123,17 @@
 <p>Please don't delete the file or restrict access until the end of course</p></div>
     </section>
     <input type="radio" name="accordion" id="acc-close" />
-    <input type="radio" name="accordion" id="cb7" />
+	
+	    <input type="radio" name="accordion" id="cb7" />
     <section class="box">
       <label class="box-title" for="cb7">Post-Task Questionnaire</label>
       <label class="box-close" for="acc-close"></label>
       <div class="box-content">          <p>Please complete the Post-Task survey below:</p>
       <a href="#" target="_blank" id="postTaskLink" class="button">Post-Task Survey</a>
-      <p>Thank you for completing our study!</p></div>
+	  <p>Thank you for completing our study!</p></div>
     </section>
     <input type="radio" name="accordion" id="acc-close" />
+	
   </nav>
   <script src="script.js"></script>
 </body>
