--- a/public/study.html
+++ b/public/study.html
@@ -25,7 +25,7 @@
     <section class="box">
       <label class="box-title" for="cb2">Task</label>
       <label class="box-close" for="acc-close"></label>
-      <div class="box-content"><h2>Study objective</h2><p><b>Create a year-by-year academic plan for your Computer Science Undergraduate course at USFCA, This includes all the required modules you will need to complete in order to graduate and all the modules you will add need to have the proper prerequisites completed in order for it to have the correct chaining and be valid. You will firstly use the USFCA website to create an Academic plan, and next you will use an AI agent to create one.</p>
+      <div class="box-content"><h2>Study objective</h2><p><b>Create a year-by-year academic plan for your Computer Science Undergraduate course at USFCA, This includes all the required modules you will need to complete in order to graduate and all the modules you will add need to have the proper prerequisites completed in order for it to have the correct chaining and be valid. You will firstly use the USFCA website to create an Academic plan, and next you will use an AI agent to create one.</b></p>
 	  <p>You will use Google Sheets to create both academic plans.</p>
 	  <p>Begin by following the steps below:</p>
           <ul>
